recursion.cons.last.Last.scala.error
Compilation error:
Last:9: error: '(' expected but identifier found.
};if lenght(l == 1) {
     ^Last:14: error: illegal start of simple expression
} 
^